fixes by sonar